--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
   }
   
+/* --- Global style starts here --- */
 /* Add the ability to scroll */
 body {
     overflow-y: scroll; 
@@ -24,43 +25,55 @@ body {
   scrollbar-width: none;  /* Firefox */
 }
 
-/* cards maximum width */
-.card, .card img{
-   max-width: 350px;
-   max-height: 350px;
-  
+/* Headings */
+.page-header { 
+  margin-top: -25px;
 }
 
-.col-md-12 img {
-  width: 150px
+/* Navigation bar */
+.ml-auto {
+  margin-right: 25px;
 }
 
+/* Footer */
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  background-color: #f5f5f5;
+  text-align: center;
+}
+/* ---  Global style ends here --- */
+
+/* ---  About Webpage style starts here --- */
+/* My image */
 #my_image {
   float: left; 
   margin: 0px 15px 15px 0px;
   width: 150px;
 }
+/* ---  About Webpage style ends here --- */
 
-.ml-auto {
-  margin-right: 25px;
+/* ---  Porfolio Webpage style starts here --- */
+/* cards maximum width */
+.card, .card img {
+   max-width: 350px;
+   max-height: 350px;
 }
-
-.h1-responsive { 
-  margin-top: -25px;
-}
-
+/* Adjust the margin of the Porfolio heading */
 #portfolio_title {
-  margin-top: 0px;
+  margin-top: 25px;
 }
+/* ---  Porfolio Webpage style ends here --- */
 
-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-    background-color: #f5f5f5;
-    text-align: center;
+/* ---  Contact Webpage style starts here --- */
+/* Messaage text entry */
+#message {
+  height: 100px;
 }
+/* ---  Contact Webpage style ends here --- */
+
 
 
